[package]
name = "exec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = { version = "0.42.0" }

[dependencies.windows-sys]
version = "0.42.0"
features = [
    "Win32_System_Memory",
    "Win32_Foundation",
    "Win32_System_Threading", 
    "Win32_Security",
    "Win32_System_WindowsProgramming",
    "Win32_UI_WindowsAndMessaging"
]
